--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <img src="assets/imgs/clouds.png" class="cloud">
         <img src="assets/imgs/mario.gif" class="mario">
         <img src="assets/imgs/pipe.png" class="pipe">
+        
+    </div>
+
+    <div class="game-over">
+        <button class="restart">REINICIAR</button>
     </div>
 
 </body>
